// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRepos Saga should dispatch the articlesLoadingError action if api request failed 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://conduit.productionready.io/api/articles?limit=10&offset=0",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getRepos Saga should dispatch the articlesLoadingError action if api request failed 2`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "articles": undefined,
      "pageCount": undefined,
      "type": "app/Articles/ARTICLES_LOADED",
    },
    "channel": null,
  },
}
`;

exports[`getRepos Saga should dispatch the articlesLoadingError action if api request failed 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://conduit.productionready.io/api/articles?author=john_doe&limit=10&offset=0",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getRepos Saga should dispatch the articlesLoadingError action if api request failed 4`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://conduit.productionready.io/api/articles?favorited=john_doe&limit=10&offset=0",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
